@@ -15,12 +15,7 @@ class Start_Controller extends System_Controller  {
 
     public function index()
     {
-        if($this->isAuthorizedFor('host_overview' ) ){
-            $host = $this->data->getFirstHost();
-            url::redirect("graph?host=$host", 302);
-        }else{
             url::redirect("graph", 302);
-        }
     }
 
 }
