@@ -17,7 +17,7 @@
 <ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="a">
 <?php
 foreach($this->result as $host){
-    printf("<li><a href=\"".url::base(TRUE)."mobile/host/%s\" data-transition=\"slide\">%s</a></li>", $host, $host);
+    printf("<li><a href=\"".url::base(TRUE)."mobile/host/%s\" data-transition=\"pop\">%s</a></li>", $host, $host);
 }
 
 ?>
